# nse-xbrl

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: fetch_reliance.py
src/nse_xbrl/: __init__.py  client.py  frames.py  models.py  tags.py  xbrl.py
tests/: test_xbrl.py
tests/fixtures/: sample_filing.xml
