[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nse-xbrl"
version = "0.1.0"
description = "Parse NSE 'Integrated Filing - Financials' XBRL documents into structured Python data"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Shantanu Anantwar" },
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "python-dateutil>=2.8",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/ShantanuAnant/nse-xbrl"
Issues = "https://github.com/ShantanuAnant/nse-xbrl/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
